--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
 	<h2> Lab Projects </h2>
 	<ul>
 		<li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Questionnaire</a></li>
+    <li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Wikipedia1</a></li>
+    <li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Wikipedia2</a></li>
 	</ul>
 </body>
