--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<h1> Lourdes Salazar </h1>
 	<ul>
-  		<li><a href="https://github.com/darbw698">Whitley</a></li>
+  		<li><a href="https://darbw698.github.io">Whitley</a></li>
   		<li><a href="https://github.com/juliaduf">Julia</a></li>
   		<li><a href="https://github.com/kashishdusad">Kashish</a></li>
   		<li><a href="https://github.com/hoy080">Yuk Hei</a></li>
