--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
 	<h1> Lourdes Salazar </h1>
 	<ul>
-  		<li><a href="github.com/darbw698">Whitley</a></li>
-  		<li><a href="github.com/juliaduf">Julia</a></li>
-  		<li><a href="github.com/kashishdusad">Kashish</a></li>
-  		<li><a href="github.com/hoy080">Yuk Hei</a></li>
-  		<li><a href="github.com/hyunj988">Kristy</a></li>
-  		<li><a href="github.com/kamay457">Yuka</a></li>
-  		<li><a href="github.com/kimm625">MichelleK</a></li>
-  		<li><a href="github.com/leeg827">Gia</a></li>
-  		<li><a href="github.com/martc626">Luna</a></li>
-  		<li><a href="github.com/michellenapolitano">MichelleN</a></li>
-  		<li><a href="github.com/qiaox606">Isabella</a></li>
-  		<li><a href="github.com/reesj7306">Jillian</a></li>
-  		<li><a href="github.com/wangt942">Tingyue</a></li>
-  		<li><a href="github.com/zhaox349">Chichi</a></li>
+  		<li><a href="https://github.com/darbw698">Whitley</a></li>
+  		<li><a href="https://github.com/juliaduf">Julia</a></li>
+  		<li><a href="https://github.com/kashishdusad">Kashish</a></li>
+  		<li><a href="https://github.com/hoy080">Yuk Hei</a></li>
+  		<li><a href="https://github.com/hyunj988">Kristy</a></li>
+  		<li><a href="https://github.com/kamay457">Yuka</a></li>
+  		<li><a href="https://github.com/kimm625">MichelleK</a></li>
+  		<li><a href="https://github.com/leeg827">Gia</a></li>
+  		<li><a href="https://github.com/martc626">Luna</a></li>
+  		<li><a href="https://github.com/michellenapolitano">MichelleN</a></li>
+  		<li><a href="https://github.com/qiaox606">Isabella</a></li>
+  		<li><a href="https://github.com/reesj7306">Jillian</a></li>
+  		<li><a href="https://github.com/wangt942">Tingyue</a></li>
+  		<li><a href="https://github.com/zhaox349">Chichi</a></li>
 	</ul> 
 	<h2> Lab Projects </h2>
 	<ul>
