--- a/stories as networks /page1.html
+++ b/stories as networks /page1.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>document</title>
 	<link rel="stylesheet" href="styles.css">
-	<script src="./p5.js"></script> 
+	<script src="./jquery/jgestures.min.js" type="text/javascript"></script>
 	<script src="./main.js"></script>
 </head>
 <body>
