--- a/stories_as_networks/page1.html
+++ b/stories_as_networks/page1.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>document</title>
 	<link rel="stylesheet" href="styles.css">
-	<script src="./jquery/jgestures.min.js" type="text/javascript"></script>
+	<script src="./jquery.js"></script>
 	<script src="./main.js"></script>
 </head>
 <body>
@@ -15,6 +15,5 @@
 	I went up to my bedroom. Absurd though the gesture was, I closed and locked the door. I threw myself down on my narrow iron bed, and waited on my back. The never changing rooftops filled the window, and the hazy <span class="red">six o'clock</span> sun hung in the sky. It seemed incredible that this day, a day without warnings or omens, might be that of my implacable death. In despite of my dead father, in despite of having been a child in one of the symmetrical gardens of Hai Feng, was I to die <a href="page2.html">now?</a>
 </div>
 <span id="circle" class="circle"></span>
-
 </body>
 </html>
