--- a/stories_as_networks/page3.html
+++ b/stories_as_networks/page3.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>The garden of forking paths</title>
 	<link rel="stylesheet" href="styles.css">
+	<script src="./main.js"></script>
 </head>
 <body>
 	<div class="pg3"><p>I carried out my plan because I felt the Chief had some fear of those of my race, of those uncountable forebears whose culmination lies in me. I wished to prove to him that a yellow man could save his armies. Besides, I had to escape the Captain. His hands and voice could, at any moment, knock and beckon at my door.
@@ -19,7 +20,6 @@
 
 	I foresee that man will resign himself each day to new abominations, that soon only soldiers and bandits will be left. To them I offer this advice: Whosoever would undertake some atrocious enterprise should act as if it were already accomplished, should impose upon himself a future as irrevocable as the <a href="page4.html">past.</a>
 </p></div>
-<span id="circle" class="circle"></span>
-	
+<span id="cursor"></span>
 </body>
 </html>
