--- a/stories_as_networks/page7.html
+++ b/stories_as_networks/page7.html
@@ -5,16 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="styles.css">
+	<script src="./main.js"></script>
 </head>
 <body>
-	<div class="pg7">
-		<P>I handed back the sheet of paper in silence. Albert went on:
+		I handed back the sheet of paper in silence. Albert went on:
 
-		"Before I discovered this letter, I kept asking myself how a book could be infinite. I could not imagine any other than a cyclic volume, circular. A volume whose last page would be the same as the first and so have the possibility of continuing indefinitely. I recalled, too, the night in the middle of The Thousand and One Nights when Queen Scheherezade, through a magical mistake on the part of her copyist, started to tell the story of The Thousand and One Nights, with the risk of again arriving at the night upon which she will relate it, and thus on to infinity. I also imagined a Platonic hereditary work, passed on from father to son, to which each individual would add a new chapter or correct, with pious care, the work of his elders.
+		"Before I discovered this letter, I kept asking myself how a book could be infinite. I could not imagine any other than a cyclic volume, circular. A volume whose last page would be the same as the first and so have the possibility of continuing indefinitely. I recalled, too, the night in the middle of The Thousand and One Nights when Queen Scheherezade, through a magical mistake on the part of her copyist, started to tell the story of <span class="red">The Thousand and One Nights,</span> with the risk of again arriving at the night upon which she will relate it, and thus on to infinity. I also imagined a Platonic hereditary work, passed on from father to son, to which each individual would add a new chapter or correct, with pious care, the work of his elders.
 
 		"These conjectures gave me amusement, but none seemed to have the remotest application to the contradictory chapters of Ts'ui Pen. At this point, I was sent from Oxford the manuscript you have just seen.
 
-		"Naturally, my attention was caught by the sentence, 'I leave to various future times, but not to all, my garden of forking paths: I had no sooner read this, than I understood. The Garden of Forking Paths was the chaotic novel itself. The phrase 'to various future times, but not to all' suggested the image of bifurcating in time, not in space. Rereading the whole work confirmed this theory. In all fiction, when a man is faced with alternatives he chooses one at the expense of the others. In the almost unfathomable Ts'ui Pen, he chooses - simultaneously - all of them. He thus creates various futures, various times which start others that will in their turn branch out and bifurcate in other times. This is the cause of the contradictions in the novel.
+		"Naturally, my attention was caught by the sentence, 'I leave to various <span class="red">future times,</span> but not to all, my garden of forking paths: I had no sooner read this, than I understood. The Garden of Forking Paths was the chaotic novel itself. The phrase <span class="red"> 'to various future times, but not to all' suggested the image of bifurcating in time, not in space. Rereading the whole work confirmed this theory.</span> In all fiction, when a man is faced with alternatives he chooses one at the expense of the others. In the almost unfathomable Ts'ui Pen, he chooses - simultaneously - all of them. He thus creates various futures, various times which start others that will in their turn branch out and bifurcate in other times. This is the cause of the contradictions in the novel.
 
 		"Fang, let us say, has a secret. A stranger knocks at his door. Fang makes up his mind to kill him. Naturally there are various possible outcomes. Fang can kill the intruder, the intruder can kill Fang, both can be saved, both can die and so on and so on. In Ts'ui Pen's work, all the possible solutions occur, each one being the point of departure for other bifurcations. Sometimes the pathways of this labyrinth converge. For example, you come to this house; but in other possible pasts you are my enemy; in others my friend.
 
@@ -28,7 +28,7 @@
 
 		At that moment I felt within me and around me something invisible and intangible pullulating. It was not the pullulation of two divergent, parallel, and finally converging armies, but an agitation more inaccessible, more intimate, prefigured by them in some way. Stephen Albert continued:
 
-		"I do not think that your illustrious ancestor toyed idly with variations. I do not find it believable that he would waste thirteen years laboring over a never ending experiment in rhetoric. In your country the novel is an inferior genre; in Ts'ui Pen's period, it was a despised one. Ts'ui Pen was a fine novelist but he was also a man of letters who, doubtless, considered himself more than a mere novelist. The testimony of his contemporaries attests to this, and certainly the known facts of his life confirm his leanings toward the metaphysical and the mystical. Philosophical conjectures take up the greater part of his novel. I know that of all problems, none disquieted him more, and none concerned him more than the profound one of time. Now then, this is the only problem that does not figure in the pages of The Garden. He does not even use the word which means time. How can these voluntary omissions be explained?"
+		"I do not think that your illustrious ancestor toyed idly with variations. I do not find it believable that he would waste <span class="red">thirteen years</span> laboring over a never ending experiment in rhetoric. In your country the novel is an inferior genre; in Ts'ui Pen's period, it was a despised one. Ts'ui Pen was a fine novelist but he was also a man of letters who, doubtless, considered himself more than a mere novelist. The testimony of his contemporaries attests to this, and certainly the known facts of his life confirm his leanings toward the metaphysical and the mystical. Philosophical conjectures take up the greater part of his novel. I know that of all problems, none disquieted him more, and none concerned him more than the profound one of time. Now then, this is the only problem that does not figure in the pages of The Garden. He does not even use the word which means time. How can these voluntary omissions be explained?"
 
 		I proposed various solutions, all of them inadequate. We discussed them. Finally Stephen Albert said: "In a guessing game to which the answer is chess, which word is the only one prohibited?" I thought for a moment and then replied:
 
@@ -41,8 +41,6 @@
 		"In all of them," I enunciated, with a tremor in my voice. "I deeply appreciate and am grateful to you for the restoration of Ts'ui Pen's garden."
 
 		"Not in all," he murmured with a smile. "Time is forever dividing itself toward innumerable futures and in one of them I am your <a href="page8.html">enemy."</a>
-		</P>
-	</div>
-	<span id="circle" class="circle"></span>
+	<span id="cursor"></span>
 </body>
 </html>
