--- a/stories_as_networks/page8.html
+++ b/stories_as_networks/page8.html
@@ -5,18 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="styles.css">
+	<script src="./main.js"></script>
 </head>
 <body>
-	<div class="pg8">
-		<P>Once again I sensed the pullulation of which I have already spoken. It seemed to me that the dew-damp garden surrounding the house was infinitely saturated with invisible people. All were Albert and myself, secretive, busy and multiform in other dimensions of time. I lifted my eyes and the short nightmare disappeared. In the black and yellow garden there was only a single man, but this man was as strong as a statue and this man was walking up the path and he was Captain Richard Madden.
+		Once again I sensed the pullulation of which I have already spoken. It seemed to me that the dew-damp garden surrounding the house was infinitely saturated with invisible people. All were Albert and myself, secretive, busy and multiform in other dimensions of time. I lifted my eyes and the short nightmare disappeared. In the black and yellow garden there was only a single man, but this man was as strong as a statue and this man was walking up the path and he was Captain Richard Madden.
 
 		"The future exists now," I replied. "But I am your friend. Can I take another look at the letter?"
 
-		Albert rose from his seat. He stood up tall as he opened the top drawer of the high writing cabinet. For a moment his back was again turned to me. I had the revolver ready. I fired with the utmost care: Albert fell without a murmur, at once. I swear that his death was instantaneous, as if he had been struck by lightning.
+		Albert rose from his seat. He stood up tall as he opened the top drawer of the high writing cabinet. For a moment his back was again turned to me. I had the revolver ready. I fired with the utmost care: Albert fell without a murmur, at once. I swear that his death was <span class="red">instantaneous, as if he had been struck by lightning.</span>
 
 		What remains is unreal and unimportant. Madden broke in and arrested me. I have been condemned to hang. Abominably, I have yet triumphed! The secret name of the city to be attacked got through to Berlin. Yesterday it was bombed. I read the news in the same English newspapers which were trying to solve the riddle of the murder of the learned Sinologist Stephen Albert by the unknown Yu Tsun. The Chief, however, had already solved this mystery. He knew that my problem was to shout, with my feeble voice, above the tumult of war, the name of the city called Albert, and that I had no other course open to me than to kill someone of that name. He does not know, for no one can, of my infinite penitence and sickness of the heart.
-		</P>
-	</div>
-	<span id="circle" class="circle"></span>
+	<span id="cursor"></span>
 </body>
 </html>
