--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 	<h2> Lab Projects </h2>
 	<ul>
 		<li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Questionnaire</a></li>
-    <li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Wikipedia1</a></li>
+    <li><a href="https://salal812.github.io/wikipide/index.html">Wikipedia1</a></li>
     <li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Wikipedia2</a></li>
+    <li><a href="https://salal812.github.io/music/index.html">Music Collection</a></li>
 	</ul>
 </body>
