--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
     <li><a href="https://salal812.github.io/wikipide/index.html">Wikipedia1</a></li>
     <li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Wikipedia2</a></li>
     <li><a href="https://salal812.github.io/music/index.html">Music Collection</a></li>
+    <li><a href="https://salal812.github.io/music/index.html">Airtable Setup</a></li>
+    <li><a href="https://salal812.github.io/music/index.html">Javascript Exercise</a></li>
 	</ul>
 </body>
