--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Wikipedia2</a></li>
     <li><a href="https://salal812.github.io/music/index.html">Music Collection</a></li>
     <li><a href="https://salal812.github.io/music/index.html">Airtable Setup</a></li>
-    <li><a href="https://salal812.github.io/music/index.html">Javascript Exercise</a></li>
+    <li><a href="https://salal812.github.io/JavaIntro/">Javascript Exercise</a></li>
 	</ul>
 </body>
