--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 	<h1> Lourdes Salazar </h1>
 	<ul>
+  <h2> Students </h2>
   		<li><a href="https://darbw698.github.io">Whitley</a></li>
   		<li><a href="https://github.com/juliaduf">Julia</a></li>
   		<li><a href="https://github.com/kashishdusad">Kashish</a></li>
@@ -27,7 +28,7 @@
   		<li><a href="https://github.com/wangt942">Tingyue</a></li>
   		<li><a href="https://github.com/zhaox349">Chichi</a></li>
 	</ul> 
-	<h2> Lab Projects </h2>
+	<h3> Lab Projects </h3>
 	<ul>
 		<li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Questionnaire</a></li>
     <li><a href="https://salal812.github.io/wikipide/index.html">Wikipedia1</a></li>
