--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <li><a href="salal812.github.io/Wikipedia_1">Wikipedia1</a></li>
     <li><a href="salal812.github.io/Wikipedia_2">Wikipedia2</a></li>
     <li><a href="https://salal812.github.io/music/index.html">Music Collection</a></li>
-    <li><a href="https://salal812.github.io/music/index.html">Airtable Setup</a></li>
+    <li><a href="https://airtable.com/tblxomCe7sfBMDSbc/viwOV4Bhmoq0ynGjq?blocks=hide">Airtable Setup</a></li>
     <li><a href="https://salal812.github.io/JavaIntro/">Javascript Exercise</a></li>
 	</ul>
 </body>
