--- a/stories_as_networks/page4.html
+++ b/stories_as_networks/page4.html
@@ -8,7 +8,7 @@
 	<script src="./main.js"></script>
 </head>
 <body>
-		Thus I proceeded, while with the eyes of a man already dead, I contemplated the fluctuations of the day which would probably be my last, and watched the diffuse coming of night.
+		<div class="page4">Thus I proceeded, while with the eyes of a man already dead, I contemplated the fluctuations of the day which would probably be my last, and watched the diffuse coming of night.
 
 		The train crept along gently, amid ash trees. It slowed down and stopped, almost in the middle of a field. No one called the name of a station. "Ashgrove?" I asked some children on the platform. "Ashgrove," they replied. I got out.
 
@@ -18,7 +18,7 @@
 
 		Under the trees of England I meditated on this lost and perhaps mythical labyrinth. I imagined it untouched and perfect on the secret summit of some mountain; I imagined it drowned under rice paddies or beneath the sea; I imagined it infinite, made not only of eight-sided pavilions and of twisting paths but also of rivers, provinces and kingdoms ... I thought of a maze of mazes, of a sinuous, ever growing maze which would take in both past and future and would somehow involve the stars.
 
-		Lost in these imaginary illusions I forgot my destiny - that of the hunted. For an undetermined period of time I felt myself cut off from the world, an abstract spectator. The hazy and murmuring countryside, the moon, the decline of the evening, stirred within me. Going down the gently sloping road I could not feel fatigue. The evening was at once intimate and <a href="page5.html">infinite.</a>
+		Lost in these imaginary illusions I forgot my destiny - that of the hunted. For an undetermined period of time I felt myself cut off from the world, an abstract spectator. The hazy and murmuring countryside, the moon, the decline of the evening, stirred within me. Going down the gently sloping road I could not feel fatigue. The evening was at once intimate and <a href="page5.html">infinite.</a></div>
 <span id="cursor"></span>
 </body>
 </html>
