--- a/stories_as_networks/page5.html
+++ b/stories_as_networks/page5.html
@@ -5,10 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="styles.css">
+	<script src="./main.js"></script>
 </head>
 <body>
-	<div class="pg5">
-		<p>
+	<div class="page5">
+		<div class=pa1>
 		The road kept descending and branching off, through meadows misty in the twilight. A high-pitched and almost syllabic music kept coming and going, moving with the breeze, blurred by the leaves and by distance.
 
 		I thought that a man might be an enemy of other men, of the differing moments of other men, but never an enemy of a country: not of fireflies, words, gardens, streams, or the West wind.
@@ -22,11 +23,13 @@
 		"I see that the worthy Hsi P'eng has troubled himself to see to relieving my solitude. No doubt you want to see the garden?"
 
 		Recognizing the name of one of our consuls, I replied, somewhat taken aback.
+		</div>
+		<div class="dialogue">
+		<h3>"The garden?"</h3>
 
-		"The garden?"
-
-		"The garden of forking paths."
-
+		<h4>"The garden of forking paths."</h4>
+		</div>
+		<div class="p2">
 		Something stirred in my memory and I said, with incomprehensible assurance:
 
 		"The garden of my ancestor, Ts'ui Pen."
@@ -38,8 +41,8 @@
 		Stephen Albert was watching me with a smile on his face. He was, as I have said, remarkably tall. His face was deeply lined and he had gray eyes and a gray beard. There was about him something of the priest, and something of the sailor. Later, he told me he had been a missionary in Tientsin before he "had aspired to become a Sinologist."
 
 		We sat down, I upon a large, low divan, he with his back to the window and to a large circular clock. I calculated that my pursuer, Richard Madden, could not arrive in less than an hour. My irrevocable decision could <a href="page6.html">wait.</a>
-		</p>
+		</p></div>
 	</div>
-	<span id="circle" class="circle"></span>
+	<span id="cursor"></span>
 </body>
 </html>
