--- a/stories_as_networks/page6.html
+++ b/stories_as_networks/page6.html
@@ -5,10 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
  	<link rel="stylesheet" href="styles.css">
+ 	<script src="./main.js"></script>
 </head>
 <body>
 	<div class="pg6">
-		<P>"A strange destiny," said Stephen Albert, "that of Ts'ui Pen - Governor of his native province, learned in astronomy, in astrology and tireless in the interpretation of the canonical books, a chess player, a famous poet and a calligrapher. Yet he abandoned all to make a book and a labyrinth. He gave up all the pleasures of oppression, justice, of a well-stocked bed, of banquets, and even of erudition, and shut himself up in the Pavilion of the Limpid Sun for thirteen years. At his death, his heirs found only a mess of manuscripts. The family, as you doubtless know, wished to consign them to the fire, but the executor of the estate - a Taoist or a Buddhist monk - insisted on their publication."
+		<div class="p12"><P>"A strange destiny," said Stephen Albert, "that of Ts'ui Pen - Governor of his native province, learned in astronomy, in astrology and tireless in the interpretation of the canonical books, a chess player, a famous poet and a calligrapher. Yet he abandoned all to make a book and a labyrinth. He gave up all the pleasures of oppression, justice, of a well-stocked bed, of banquets, and even of erudition, and shut himself up in the Pavilion of the Limpid Sun for thirteen years. At his death, his heirs found only a mess of manuscripts. The family, as you doubtless know, wished to consign them to the fire, but the executor of the estate - a Taoist or a Buddhist monk - insisted on their publication."
 
 		"Those of the blood of Ts'ui Pen," I replied, "still curse the memory of that monk. Such a publication was madness. The book is a shapeless mass of contradictory rough drafts. I examined it once upon a time: the hero dies in the third chapter, while in the fourth he is alive. As for that other enterprise of Ts'ui Pen ... his Labyrinth..."
 
@@ -22,9 +23,10 @@
 
 		Two circumstances showed me the direct solution to the problem. First, the curious legend that Ts'ui Pen had proposed to create an infinite maze, second, a fragment of a letter which I discovered."
 
-		Albert rose. For a few moments he turned his back to me. He opened the top drawer in the high black and gilded writing cabinet. He returned holding in his hand a piece of paper which had once been crimson but which had faded with the passage of time: it was rose colored, tenuous, quadrangular. Ts'ui Pen's calligraphy was justly famous. Eagerly, but without understanding, I read the words which a man of my own blood had written with a small brush: "I leave to various future times, but not to all, my garden of forking <a href="page7.html">paths."</a>
+		Albert rose. For a few moments he turned his back to me. He opened the top drawer in the high black and gilded writing cabinet. He returned holding in his hand a piece of paper which had once been crimson but which had faded with the passage of time: it was rose colored, tenuous, quadrangular. Ts'ui Pen's calligraphy was justly famous. Eagerly, but without understanding, I read the words which a man of my own blood had written with a small brush: </div>
+		<div class="head">"I leave to various future times, but not to all, my garden of forking <a href="page7.html">paths."</a></div>
 		</P>
 	</div>
-	<span id="circle" class="circle"></span>
+	<span id="cursor"></span>
 </body>
 </html>
