--- a/stories_as_networks/page8.html
+++ b/stories_as_networks/page8.html
@@ -6,15 +6,33 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="styles.css">
 	<script src="./main.js"></script>
+	<script src="./main.js"></script>
 </head>
 <body>
-		Once again I sensed the pullulation of which I have already spoken. It seemed to me that the dew-damp garden surrounding the house was infinitely saturated with invisible people. All were Albert and myself, secretive, busy and multiform in other dimensions of time. I lifted my eyes and the short nightmare disappeared. In the black and yellow garden there was only a single man, but this man was as strong as a statue and this man was walking up the path and he was Captain Richard Madden.
+		<div class="p12">His countenance, in the bright circle of lamplight, was certainly that of an ancient, but it shone with something unyielding, even immortal.
 
-		"The future exists now," I replied. "But I am your friend. Can I take another look at the letter?"
+		With slow precision, he read two versions of the same epic chapter. In the first, an army marches into battle over a desolate mountain pass. The bleak and somber aspect of the rocky landscape made the soldiers feel that life itself was of little value, and so they won the battle easily. In the second, the same army passes through a palace where a banquet is in progress. The splendor of the feast remained a memory throughout the glorious battle, and so victory followed.
 
-		Albert rose from his seat. He stood up tall as he opened the top drawer of the high writing cabinet. For a moment his back was again turned to me. I had the revolver ready. I fired with the utmost care: Albert fell without a murmur, at once. I swear that his death was <span class="red">instantaneous, as if he had been struck by lightning.</span>
+		With proper veneration I listened to these old tales, although perhaps with less admiration for them in themselves than for the fact that they had been thought out by one of my own blood, and that a man of a distant empire had given them back to me, in the last stage of a desperate adventure, on a Western island. I remember the final words, repeated at the end of each version like a secret command: "Thus the heroes fought, with tranquil heart and bloody sword. They were resigned to killing and to dying."
 
-		What remains is unreal and unimportant. Madden broke in and arrested me. I have been condemned to hang. Abominably, I have yet triumphed! The secret name of the city to be attacked got through to Berlin. Yesterday it was bombed. I read the news in the same English newspapers which were trying to solve the riddle of the murder of the learned Sinologist Stephen Albert by the unknown Yu Tsun. The Chief, however, had already solved this mystery. He knew that my problem was to shout, with my feeble voice, above the tumult of war, the name of the city called Albert, and that I had no other course open to me than to kill someone of that name. He does not know, for no one can, of my infinite penitence and sickness of the heart.
+		At that moment I felt within me and around me something invisible and intangible pullulating. It was not the pullulation of two divergent, parallel, and finally converging armies, but an agitation more inaccessible, more intimate, prefigured by them in some way. Stephen Albert continued:</div>
+
+		<div class="dialogue"><div class="head3">"I do not think that your illustrious ancestor toyed idly with variations. I do not find it believable that he would waste <span class="red">thirteen years</span> laboring over a never ending experiment in rhetoric. In your country the novel is an inferior genre; in Ts'ui Pen's period, it was a despised one. Ts'ui Pen was a fine novelist but he was also a man of letters who, doubtless, considered himself more than a mere novelist. The testimony of his contemporaries attests to this, and certainly the known facts of his life confirm his leanings toward the metaphysical and the mystical. Philosophical conjectures take up the greater part of his novel. I know that of all problems, none disquieted him more, and none concerned him more than the profound one of time. Now then, this is the only problem that does not figure in the pages of The Garden. He does not even use the word which means time. How can these voluntary omissions be explained?"</div>
+
+		<div class="p2">I proposed various solutions, all of them inadequate. We discussed them. Finally Stephen Albert said:</div>
+		<div class="head3">In a guessing game to which the answer is chess, which word is the only one prohibited?"</div> 
+
+		<div class="head4">I thought for a moment and then replied:
+
+		"The word is chess."</div>
+
+		<div class="head3">Precisely," said Albert. "The Garden of Forking Paths is an enormous guessing game, or parable, in which the subject is time. The rules of the game forbid the use of the word itself. To eliminate a word completely, to refer to it by means of inept phrases and obvious paraphrases, is perhaps the best way of drawing attention to it. This, then, is the tortuous method of approach preferred by the oblique Ts'ui Pen in every meandering of his interminable novel. I have gone over hundreds of manuscripts, I have corrected errors introduced by careless copyists, I have worked out the plan from this chaos, I have restored, or believe I have restored, the original. I have translated the whole work. I can state categorically that not once has the word time been used in the whole book.
+
+		"The explanation is obvious. The Garden of Forking Paths is a picture, incomplete yet not false, of the universe such as Ts'ui Pen conceived it to be. Differing from Newton and Schopenhauer, your ancestor did not think of time as absolute and uniform. He believed in an infinite series of times, in a dizzily growing, ever spreading network of diverging, converging and parallel times. This web of time - the strands of which approach one another, bifurcate, intersect or ignore each other through the centuries - embraces every possibility. We do not exist in most of them. In some you exist and not I, while in others I do, and you do not, and in yet others both of us exist. In this one, in which chance has favored me, you have come to my gate. In another, you, crossing the garden, have found me dead. In yet another, I say these very same words, but am an error, a phantom."</div>
+
+		<div class="head4">In all of them," I enunciated, with a tremor in my voice. "I deeply appreciate and am grateful to you for the restoration of Ts'ui Pen's garden."</div>
+
+		<div class="head3">Not in all," he murmured with a smile. "Time is forever dividing itself toward innumerable futures and in one of them I am your <a href="page9.html">enemy”</a></div>
 	<span id="cursor"></span>
 </body>
 </html>
