--- a/Michelle_N/index.html
+++ b/Michelle_N/index.html
@@ -34,13 +34,13 @@
 	</div>
 	</div>
 	<div class="second">
-	<p>The website introduces you and draws you in with a comprehensive and insightful table of contents that explains the intention behind the design and how it complements and advances the story at the same time.</p>
+	<p>This website introduces you and draws you in with a comprehensive and insightful table of contents that explains the intention behind the design and how it complements and advances the story at the same time.</p>
 	<video width="620" height="540" autoplay muted>
   	<source src="table_2.mp4" type="video/mp4">
   	<source src="table_2.ogg" type="table_2/ogg">
   	Your browser does not support the video tag.
 	</video>
-	<p>The style and colors of the graphics complement the mood of the story. The blending mode creates interesting patterns when overlaid, having the option to decrease the opacity of the background makes it more comfortable to read while still keeping the style and complexity of the design.</p>
+	<p>The style and colors of the graphics complement the mood of the story "In Praise of Shadows" by Jun'ichiro Tanizaki. The blending mode creates interesting patterns when overlaid, having the option to decrease the opacity of the background makes it more comfortable to read while still keeping the style and complexity of the design.</p>
 	<video width="620" height="540" autoplay muted>
   	<source src="overlay.mp4" type="video/mp4">
   	<source src="overlay.ogg" type="table_2/ogg">
