--- a/The_Good_Life/index.html
+++ b/The_Good_Life/index.html
@@ -5,9 +5,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./styles.css">
 	<script src="./main.js"></script>	
-	<title> Document </title>
+	<title> The Good Life </title>
 </head>
 <body>
-	<h1>testing</h1>
+	<h1>Welcome To</h1>
+	<div class="room">
+		<div class="logo">
+			<img src="./images/logo.png" width="100" height="100">
+		</div>
+		<div class="wall">
+			<div class="wall1">
+				<img src="./images/wall1.png" width="400" height="400">
+			</div>
+			<div class="wall2">
+				<img src="./images/nail1.png" width="300" height="300">
+			</div>
+			<div class="wall3">
+				<img src="./images/flooro1.png" width="300" height="300">
+			</div>
+			<div class="chair">
+				<img src="./images/chair1.png" width="500" height="500">
+			</div>
+		</div>
+		<div class="floor">
+		</div>
 </body>
 </html>
