--- a/The_Good_Life/catalogue.html
+++ b/The_Good_Life/catalogue.html
@@ -4,11 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="stylestwo.css">
-	<script src="./second.js"></script>	
+	<script type="text/javascript" src="airtable.browser.js"  defer></script>
+	<script type="text/javascript" src="./second.js" defer></script>	
 	<title> catalogue </title>
 </head>
 <body>
-	<img src="./images/furniture.png" width="400px" height="600px">
-	<img src="./images/chair.png" width="500px" height="500px">
 </body>
 </html>
