--- a/The_Good_Life/catalogue.html
+++ b/The_Good_Life/catalogue.html
@@ -9,5 +9,18 @@
 	<title> catalogue </title>
 </head>
 <body>
+	<div class="container">
+		<div class="room">
+			<a href="index.html">Home</a>
+			<span class="kitchen">Kitchen</span>
+			<span class="living_room">Living Room</span>
+			<span class="bedroom">Bedroom</span>
+			<span class="office">Office</span>
+			<span class="miscellaneous">Miscellaneous</span>
+			<span class="entrance">Entrance</span>
+			<span class="bathroom">Bathroom</span>
+			<span class="tools_cleaning">Tools & Cleaning</span>
+		</div>
+	</div>
 </body>
 </html>
