--- a/The_Good_Life/index.html
+++ b/The_Good_Life/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script type="text/javascript" src="./main.js" defer> </script>	
 	<link rel="stylesheet" href="./styles.css">
-	<script src="./main.js"></script>	
 	<title> The Good Life </title>
 </head>
 <body>
@@ -14,8 +14,9 @@
 			<img src="./images/logo.png" width="100" height="100">
 		</div>
 		<div class="wall">
+		<button id="button"> click me </button>
 			<div class="wall1">
-				<img src="./images/wall1.png" width="400" height="400">
+				<img src="./images/wall2.png" width="400" height="400" id="wall">
 			</div>
 			<div class="wall2">
 				<img src="./images/nail1.png" width="300" height="300">
