--- a/The_Good_Life/index.html
+++ b/The_Good_Life/index.html
@@ -8,27 +8,31 @@
 	<title> The Good Life </title>
 </head>
 <body>
-	<h1>Welcome To</h1>
+<div class="whole">
+	<div class="header">
+		<!--<h1>Welcome To</h1>-->
+		<img class="logo" src="./images/logo.png" id="logo" width="350" height="350">
+	</div>
 	<div class="room">
-		<div class="logo">
-			<img src="./images/logo.png" width="100" height="100">
-		</div>
-		<div class="wall">
-		<button id="button"> click me </button>
+		<!--<div class="wall" style="background-image: url('./images/wall1.png');" id="wall">-->
 			<div class="wall1">
-				<img src="./images/wall2.png" width="400" height="400" id="wall">
+				<img src="./images/door.png" width="500" height="500">
 			</div>
 			<div class="wall2">
 				<img src="./images/nail1.png" width="300" height="300">
 			</div>
 			<div class="wall3">
-				<img src="./images/flooro1.png" width="300" height="300">
+				<img src="./images/flooro2.png" width="300" height="300">
 			</div>
 			<div class="chair">
 				<img src="./images/chair1.png" width="500" height="500">
 			</div>
+			<div class="wall">
+				<img src="./images/wall1.png" width="920" height="780px" id="wall">
+			</div>
 		</div>
-		<div class="floor">
-		</div>
+		<h2><a href="catalogue.html">Go to catalogue</a></h2>
+	</div>
+</div>
 </body>
 </html>
