--- a/ecosystem/index.html
+++ b/ecosystem/index.html
@@ -38,7 +38,13 @@
             <audio id="six"> </audio>
             <button onclick="PlayRainforest()"> Rainforest </button>
             <button onclick="PauseRainforest()"> pause rainforest </button>
-        </div>
+    </div>
+    <div class="vid">
+        <video autoplay muted loop id="myVideo"></video>
+        <video src="vid1.mp4" type="video/mp4" autoplay loop playsinline muted>
+        Your browser does not support HTML5 video.
+        </video>
+        <button id="small">click me!</button>
     </div>
         <script src="" async defer></script>
     </body>
