--- a/index.html
+++ b/index.html
@@ -36,5 +36,22 @@
     <li><a href="https://salal812.github.io/music/index.html">Music Collection</a></li>
     <li><a href="https://airtable.com/tblxomCe7sfBMDSbc/viwOV4Bhmoq0ynGjq?blocks=hide">Airtable Setup</a></li>
     <li><a href="https://salal812.github.io/JavaIntro/">Javascript Exercise</a></li>
+	<li><a href="https:salal812.github.io/DomManipulation">DOM manipulation</a></li>
+	<li><a href="https:salal812.github.io/AirtableApi">Airtable Api</a></li>
+	<li><a href="https:salal812.github.io/GlitchRemix">Glitch Remix</a></li>
+	</ul>
+	<ul>
+		<h4> Studio Projects </h4>
+		<<li><a href=>Elastic Collections</a>
+	</ul>
+	
+	<li><a href="https:salal812.github.io/">DOM manipulation</a></li>
+	JavaScript DOM Manipulation
+Codecademy screenshot to prove lesson completion
+Airtable API & Show and Tell
+JSON Database / Websockets Glitch Demo Remix
+Studio Projects
+Elastic Collection
+Input / Output
 	</ul>
 </body>
