--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 	</ul>
 	<ul>
 		<h4> Studio Projects </h4>
-		<<li><a href=>Elastic Collections</a>
-	</ul>
-	
+	<li><a href=>Elastic Collections</a>
+	<li><a href="https:salal812.github.io/The_Good_Life/">Elastic Collections</a></li>
 	<li><a href="https:salal812.github.io/">DOM manipulation</a></li>
+	</ul>
 	JavaScript DOM Manipulation
 Codecademy screenshot to prove lesson completion
 Airtable API & Show and Tell
