--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<h3> Lab Projects </h3>
 	<ul>
 		<li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Questionnaire</a></li>
-    <li><a href="salal812.github.io/Wikipedia_1">Wikipedia1</a></li>
+    <li><a href="salal812.github.io/Wikipedia_1/">Wikipedia1</a></li>
     <li><a href="salal812.github.io/Wikipedia_2">Wikipedia2</a></li>
     <li><a href="https://salal812.github.io/music/index.html">Music Collection</a></li>
     <li><a href="https://airtable.com/tblxomCe7sfBMDSbc/viwOV4Bhmoq0ynGjq?blocks=hide">Airtable Setup</a></li>
