--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<ul>
 		<h4> Studio Projects </h4>
 	<li><a href=>Elastic Collections</a>
-	<li><a href="https:salal812.github.io/The_Good_Life/">Elastic Collections</a></li>
+	<li><a href="https://salal812.github.io/The_Good_Life/">Elastic Collections</a></li>
 	<li><a href="https:salal812.github.io/">DOM manipulation</a></li>
 	</ul>
 	JavaScript DOM Manipulation
