commented out old content

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h1> Lourdes Salazar </h1>
   <h2>Students</h2>
   <ul>
-    	<li><a href="https://darbw698.github.io">Whitley</a></li>
+    	<!----<li><a href="https://darbw698.github.io">Whitley</a></li>
   		<li><a href="https://github.com/juliaduf">Julia</a></li>
   		<li><a href="https://github.com/kashishdusad">Kashish</a></li>
   		<li><a href="https://github.com/hoy080">Yuk Hei</a></li>
@@ -53,5 +53,5 @@ JSON Database / Websockets Glitch Demo Remix
 Studio Projects
 Elastic Collection
 Input / Output
-	</ul>
+	</ul>--->
 </body>
