--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <script src="/script.js" defer></script>
   </head>  
 <body>
-	<h1> Lourdes Salazar </h1>
+<!-----	<h1> Lourdes Salazar </h1>
   <h2>Students</h2>
-  <ul>
-    	<!----<li><a href="https://darbw698.github.io">Whitley</a></li>
+  <ul>-->
+    	<!---- <li><a href="https://darbw698.github.io">Whitley</a></li>
   		<li><a href="https://github.com/juliaduf">Julia</a></li>
   		<li><a href="https://github.com/kashishdusad">Kashish</a></li>
   		<li><a href="https://github.com/hoy080">Yuk Hei</a></li>
