--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="/script.js" defer></script>
   </head>  
 <body>
+	<li><a href="salal812.github.io/websprite/">my website</a></li>
 <!-----	<h1> Lourdes Salazar </h1>
   <h2>Students</h2>
   <ul>-->
