--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <script src="/script.js" defer></script>
   </head>  
 <body>
-	<li><a href="salal812.github.io/websprite/">my website</a></li>
+	<div id="container">
+		<ul id="slides"></ul>
+	</div>
+	<li><a href="http://127.0.0.1:5500/websprite/index.html">my website</a></li>
 <!-----	<h1> Lourdes Salazar </h1>
   <h2>Students</h2>
   <ul>-->
