--- a/websprite/index.html
+++ b/websprite/index.html
@@ -13,7 +13,7 @@
     <div id="content">
         <div id="Print">
             <p>print</p>
-            <a href="print.html">
+            <a href="https://salal812.github.io/websprite/magdalene.html">
                 <img border="0" alt="print" src="./images/Magdalene.gif" width="100" height="100">
                 </a>
         </div>
