--- a/websprite/loom.html
+++ b/websprite/loom.html
@@ -15,6 +15,7 @@
     <div id="container">
         <h1>loom</h1>
         <h2>time is money,<br> time to start spending it well</h2>
+        <h3> A digital product design assignment - an app that connects people - <br> an idealistic app that borrows characteristics from the sharing/gig economy apps where the currency is time</h3>
         <div id="pink">
         </div>
         <div id="blackt">
