--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
  	  <title>Lou</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap" rel="stylesheet">
-    <script src="/script.js" defer></script>
   </head>  
 <body>
 	<div id="container">
 		<ul id="slides"></ul>
 	</div>
+	<li><a href="http://127.0.0.1:5500/websprite/index.html">my website</a></li>
 	<li><a href="http://127.0.0.1:5500/websprite/index.html">my website</a></li>
 <!-----	<h1> Lourdes Salazar </h1>
   <h2>Students</h2>
@@ -58,4 +58,5 @@ Studio Projects
 Elastic Collection
 Input / Output
 	</ul>--->
+	<script src="script.js"></script>
 </body>
