--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<ul id="slides"></ul>
 	</div>
 	<li><a href="http://127.0.0.1:5500/websprite/index.html">my website</a></li>
-	<li><a href="http://127.0.0.1:5500/websprite/index.html">my website</a></li>
+	<li><a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="print" src="./images/Magdalene.gif" width="100" height="100"</a></li>
 <!-----	<h1> Lourdes Salazar </h1>
   <h2>Students</h2>
   <ul>-->
@@ -58,5 +58,6 @@ Studio Projects
 Elastic Collection
 Input / Output
 	</ul>--->
+	<p><a href="https://www.fg-a.com">Free Gifs - Animations - Clipart</a></p>
 	<script src="script.js"></script>
 </body>
