--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 		<ul id="slides"></ul>
 	</div>
 	<li><a href="http://127.0.0.1:5500/websprite/index.html">my website</a></li>
-	<li><a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="print" src="cv.gif" width="100" height="100"</a></li>
+	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="print" src="print.gif" width="200" height="200"</a>
+	<a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="200" height="200"</a>
+	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="Sbemail.gif" width="auto" height="60"</a>
 <!-----	<h1> Lourdes Salazar </h1>
   <h2>Students</h2>
   <ul>-->
