--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap" rel="stylesheet">
   </head>  
 <body>
-	<div id="container">
-		<ul id="slides"></ul>
-	</div>
-	<li><a href="http://127.0.0.1:5500/websprite/index.html">my website</a></li>
-	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="print" src="print.gif" width="200" height="200"</a>
+	<a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="200" height="200"</a>
 	<a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="200" height="200"</a>
-	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="Sbemail.gif" width="auto" height="60"</a>
+	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="interface.gif" width="200" height="200"</a>
+	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="email.gif" width="200" height="200"</a>
 <!-----	<h1> Lourdes Salazar </h1>
   <h2>Students</h2>
   <ul>-->
@@ -60,6 +57,5 @@ Studio Projects
 Elastic Collection
 Input / Output
 	</ul>--->
-	<p><a href="https://www.fg-a.com">Free Gifs - Animations - Clipart</a></p>
 	<script src="script.js"></script>
 </body>
