--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap" rel="stylesheet">
   </head>  
 <body>
-	<a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="200" height="200"</a>
-	<a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="200" height="200"</a>
-	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="interface.gif" width="200" height="200"</a>
-	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="email.gif" width="200" height="200"</a>
+	<a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="150" height="150"</a>
+	<a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="150" height="150"</a>
+	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="interface.gif" width="150" height="150"</a>
+	<a href="4fun.html"><img border="0" alt="email" src="4fun.gif" width="150" height="150"</a>
+	<a href="social.html"><img border="0" alt="email" src="social.gif" width="150" height="150"</a>
+	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="email.gif" width="150" height="150"</a>
 <!-----	<h1> Lourdes Salazar </h1>
   <h2>Students</h2>
   <ul>-->
