--- a/index.html
+++ b/index.html
@@ -5,35 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
  	  <title>Lou</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
   </head>  
 <body>
-	<a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="150" height="150"</a>
-	<a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="150" height="150"</a>
-	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="interface.gif" width="150" height="150"</a>
+<table>
+	<tr a class="p1"><a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="150" height="150"><iframe class="description" src="https://salal812.github.io/websprite/magdalene.html"></iframe></a>
+	</tr>
+	<span id="p3"></span><a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="150" height="150"</a></span>
+	<span id="p1"></span><a href="websprite/Java/json.html"><img border="0" alt="email" src="interface.gif" width="150" height="150"</a></span>
 	<a href="4fun.html"><img border="0" alt="email" src="4fun.gif" width="150" height="150"</a>
 	<a href="social.html"><img border="0" alt="email" src="social.gif" width="150" height="150"</a>
 	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="email.gif" width="150" height="150"</a>
-<!-----	<h1> Lourdes Salazar </h1>
-  <h2>Students</h2>
-  <ul>-->
-    	<!---- <li><a href="https://darbw698.github.io">Whitley</a></li>
-  		<li><a href="https://github.com/juliaduf">Julia</a></li>
-  		<li><a href="https://github.com/kashishdusad">Kashish</a></li>
-  		<li><a href="https://github.com/hoy080">Yuk Hei</a></li>
-  		<li><a href="https://github.com/hyunj988">Kristy</a></li>
-  		<li><a href="https://github.com/kamay457">Yuka</a></li>
-  		<li><a href="https://github.com/kimm625">MichelleK</a></li>
-  		<li><a href="https://github.com/leeg827">Gia</a></li>
-  		<li><a href="https://github.com/martc626">Luna</a></li>
-  		<li><a href="https://github.com/michellenapolitano">MichelleN</a></li>
-  		<li><a href="https://github.com/qiaox606">Isabella</a></li>
-  		<li><a href="https://github.com/reesj7306">Jillian</a></li>
-  		<li><a href="https://github.com/wangt942">Tingyue</a></li>
-  		<li><a href="https://github.com/zhaox349">Chichi</a></li>
-	</ul> 
-	<h3> Lab Projects </h3>
+</table>
+<!----	<h3> Lab Projects </h3>
 	<ul>
 		<li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Questionnaire</a></li>
     <li><a href="https://salal812.github.io/Wikipedia_1/">Wikipedia1</a></li>
@@ -58,6 +43,7 @@ JSON Database / Websockets Glitch Demo Remix
 Studio Projects
 Elastic Collection
 Input / Output
-	</ul>--->
-	<script src="script.js"></script>
+	</ul>---> 
 </body>
+<script src="script.js"></script>
+<script src="jquery-3.6.0.min.js"></script>
