--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 <table>
 	<tr a class="p1"><a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="150" height="150"><iframe class="description" src="https://salal812.github.io/websprite/magdalene.html"></iframe></a>
 	</tr>
-	<span id="p3"></span><a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="150" height="150"</a></span>
+	<tr>
+	<a id="p3"><a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="150" height="150"></a>
+	</tr>
+	<tr>
 	<span id="p1"></span><a href="websprite/Java/json.html"><img border="0" alt="email" src="interface.gif" width="150" height="150"</a></span>
+	</tr>
+	<tr>
 	<a href="4fun.html"><img border="0" alt="email" src="4fun.gif" width="150" height="150"</a>
 	<a href="social.html"><img border="0" alt="email" src="social.gif" width="150" height="150"</a>
+	</tr>
+	<tr>
 	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="email.gif" width="150" height="150"</a>
+	</tr>
 </table>
 <!----	<h3> Lab Projects </h3>
 	<ul>
