--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<tr a class="p1"><a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="150" height="150"><iframe class="description" src="https://salal812.github.io/websprite/magdalene.html"></iframe></a>
 	</tr>
 	<tr>
-	<a id="p3"><a href="http://127.0.0.1:5500/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="150" height="150"></a>
+	<a id="p3"><a href="https://salal812.github.io/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="150" height="150"></a>
 	</tr>
 	<tr>
 	<span id="p1"></span><a href="websprite/Java/json.html"><img border="0" alt="email" src="interface.gif" width="150" height="150"</a></span>
