--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  	  <title>Lou</title>
 	<link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap" rel="stylesheet">
+	<link href="https://vjs.zencdn.net/7.18.1/video-js.css" rel="stylesheet" />
 	<link rel="stylesheet" href="styles.css">
   </head>  
 <body>
+	<div class="vids">
+		<video id="vid1" width="320" height="240" controls>
+			<source src="./images/vid1.mp4" type="video/mp4">
+		</video>
+	</div>
 <table>
 	<tr a class="p1"><a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="150" height="150"><iframe class="description" src="https://salal812.github.io/websprite/magdalene.html"></iframe></a>
-	</tr>
-	<tr>
-	<a id="p3"><a href="https://salal812.github.io/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="150" height="150"></a>
 	</tr>
 	<tr>
 	<span id="p1"></span><a href="websprite/Java/json.html"><img border="0" alt="email" src="interface.gif" width="150" height="150"</a></span>
@@ -22,6 +25,9 @@
 	<a href="4fun.html"><img border="0" alt="email" src="4fun.gif" width="150" height="150"</a>
 	<a href="social.html"><img border="0" alt="email" src="social.gif" width="150" height="150"</a>
 	</tr>
+	<tr>
+		<a id="p3"><a href="https://salal812.github.io/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="150" height="150"></a>
+		</tr>
 	<tr>
 	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="email.gif" width="150" height="150"</a>
 	</tr>
@@ -52,6 +58,7 @@ Studio Projects
 Elastic Collection
 Input / Output
 	</ul>---> 
-</body>
-<script src="script.js"></script>
+<script src="lou.js"></script>
 <script src="jquery-3.6.0.min.js"></script>
+<script src="https://vjs.zencdn.net/7.18.1/video.min.js"></script>
+</body>
