--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
 	<link rel="stylesheet" href="styles.css">
   </head>  
 <body>
-	<div class="vids">
-		<video id="vid1" width="320" height="240" controls>
-			<source src="./images/vid1.mp4" type="video/mp4">
-		</video>
-	</div>
+	<video
+    id="my-video"
+    class="video-js"
+    controls
+    preload="auto"
+    poster="MY_VIDEO_POSTER.jpg"
+    data-setup="{}"
+  >
+    <source src="images/vid1.mp4" type="video/mp4" />
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a
+      web browser that
+      <a href="https://videojs.com/html5-video-support/" target="_blank"
+        >supports HTML5 video</a
+      >
+    </p>
+  </video>
 <table>
 	<tr a class="p1"><a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="150" height="150"><iframe class="description" src="https://salal812.github.io/websprite/magdalene.html"></iframe></a>
 	</tr>
