--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     poster="MY_VIDEO_POSTER.jpg"
     data-setup="{}"
   >
-    <source src="images/vid1.mp4" type="video/mp4" />
+    <source src="videos/vid1.webm" type="video/webm" />
     <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a
       web browser that
