--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<link rel="stylesheet" href="styles.css">
   </head>  
 <body>
-	<video id="vid1" width="320" height="240" controls>
+	<video id="vid" width="320" height="240" controls>
 		<source src="websprite/images/vid1.mp4" type="video/mp4">
 	  Your browser does not support the video tag.
 	  </video>
 	<div id="button">
-		<h1>Next Vid</h1>
+		<p>Next Vid</p>
 	</div>
 <table>
 	<tr a class="p1"><a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="150" height="150"><iframe class="description" src="https://salal812.github.io/websprite/magdalene.html"></iframe></a>
