--- a/index.html
+++ b/index.html
@@ -3,36 +3,40 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
- 	  <title>Lou</title>
+    <meta name="viewport" content="width=d4vice-width, 4nitial-scale=1>
+	  <title>Lou</title>
 	<link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
   </head>  
 <body>
-	<video id="vid" width="320" height="240" controls>
+	<div id="card">
+	<video id="vid" width="420" eight="240" controls>
 		<source src="websprite/images/vid1.mp4" type="video/mp4">
 	  Your browser does not support the video tag.
 	  </video>
 	<div id="button">
 		<p>Next Vid</p>
 	</div>
-<table>
-	<tr a class="p1"><a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" alt="print" src="print.gif" width="150" height="150"><iframe class="description" src="https://salal812.github.io/websprite/magdalene.html"></iframe></a>
-	</tr>
-	<tr>
-	<span id="p1"></span><a href="websprite/Java/json.html"><img border="0" alt="email" src="interface.gif" width="150" height="150"</a></span>
-	</tr>
-	<tr>
-	<a href="4fun.html"><img border="0" alt="email" src="4fun.gif" width="150" height="150"</a>
-	<a href="social.html"><img border="0" alt="email" src="social.gif" width="150" height="150"</a>
-	</tr>
-	<tr>
-		<a id="p3"><a href="https://salal812.github.io/websprite/cv.html"><img border="0" alt="cv" src="cv.gif" width="150" height="150"></a>
-		</tr>
-	<tr>
-	<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" alt="email" src="email.gif" width="150" height="150"</a>
-	</tr>
-</table>
+	</div>
+<div class="navigation">
+	<div class="row1">
+			<a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" width=140" height="100"
+		 alt="print" src="print.gif"><iframe class="description" src="https://salal812.github.io/websprite/magdalene.html"></iframe></a>
+			<span id="p1"></span>
+			
+			<a href="websprite/Java/json.html"><img border="0" width=140" height="100" alt="email" src="interface.gif"</a></span>
+	</div>
+	<div class="row2">
+			<a href="4fun.html"><img border="0" width=140" height="100 alt="email" src="4fun.gif"</a>
+
+			<a href="social.html"><img border="0" width=140" height="100"alt="email" src="social.gif"</a>
+	</div>
+	<div class="row3">
+			<a href="https://salal812.github.io/websprite/cv.html"><img border="0" width=140" height="100" alt"cv" src="cv.gif"></a>
+
+			<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" width=140" height="100" alt="email" src="email.gif"</a>
+	</div>
+</div>
 <!----	<h3> Lab Projects </h3>
 	<ul>
 		<li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Questionnaire</a></li>
