--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
 	</div>
 <div class="navigation">
 	<div class="row1">
-			<a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" width=140" height="100"
+			<a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" width=140" height="auto"
 		 alt="print" src="print.gif"><iframe class="description" src="https://salal812.github.io/websprite/magdalene.html"></iframe></a>
 			<span id="p1"></span>
 			
-			<a href="websprite/Java/json.html"><img border="0" width=140" height="100" alt="email" src="interface.gif"</a></span>
+			<a href="websprite/Java/json.html"><img border="0" width=140" height="auto" alt="email" src="interface.gif"</a></span>
 	</div>
 	<div class="row2">
-			<a href="4fun.html"><img border="0" width=140" height="100 alt="email" src="4fun.gif"</a>
+			<a href="4fun.html"><img border="0" width="140" height="auto" alt="email" src="4fun.gif"</a>
 
-			<a href="social.html"><img border="0" width=140" height="100"alt="email" src="social.gif"</a>
+			<a href="social.html"><img border="0" width=140" height="auto"alt="email" src="social.gif"</a>
 	</div>
 	<div class="row3">
-			<a href="https://salal812.github.io/websprite/cv.html"><img border="0" width=140" height="100" alt"cv" src="cv.gif"></a>
+			<a href="https://salal812.github.io/websprite/cv.html"><img border="0" width=140" height="auto" alt"cv" src="cv.gif"></a>
 
-			<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" width=140" height="100" alt="email" src="email.gif"</a>
+			<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" width=140" height="auto" alt="email" src="email.gif"</a>
 	</div>
 </div>
 <!----	<h3> Lab Projects </h3>
