--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=d4vice-width, 4nitial-scale=1>
+    <meta name="viewport" content="width=d4vice-width, 4nitial-scale=1.0">
 	  <title>Lou</title>
 	<link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
   </head>  
 <body>
+<div class="all">
 	<div id="card">
 	<video id="vid" width="420" eight="240" controls>
 		<source src="websprite/images/vid1.mp4" type="video/mp4">
@@ -21,7 +22,7 @@
 <div class="navigation">
 	<div class="row1">
 			<a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" width=140" height="auto"
-		 alt="print" src="print.gif"><iframe class="description" src="https://salal812.github.io/websprite/magdalene.html"></iframe></a>
+		 alt="print" src="print.gif"></a>
 			<span id="p1"></span>
 			
 			<a href="websprite/Java/json.html"><img border="0" width=140" height="auto" alt="email" src="interface.gif"</a></span>
@@ -36,6 +37,7 @@
 
 			<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" width=140" height="auto" alt="email" src="email.gif"</a>
 	</div>
+</div>
 </div>
 <!----	<h3> Lab Projects </h3>
 	<ul>
