function that runs iframes in the page

--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
 	</div>
 <div class="navigation">
 	<div class="row1">
-			<a href="https://salal812.github.io/websprite/magdalene.html"><img border="0" width=140" height="auto"
-		 alt="print" src="print.gif"></a>
-			<span id="p1"></span>
-			
+			<img id="print" border="0" width=140" height="auto"
+		 	alt="print" src="print.gif">
+			</img>
+
 			<a href="websprite/Java/json.html"><img border="0" width=140" height="auto" alt="email" src="interface.gif"</a></span>
 	</div>
 	<div class="row2">
 			<a href="4fun.html"><img border="0" width="140" height="auto" alt="email" src="4fun.gif"</a>
+
+			<span id="proj"></span>
 
 			<a href="social.html"><img border="0" width=140" height="auto"alt="email" src="social.gif"</a>
 	</div>
@@ -37,6 +39,7 @@
 
 			<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" width=140" height="auto" alt="email" src="email.gif"</a>
 	</div>
+	<iframe id="mary" src="https://salal812.github.io/websprite/magdalene.html"></iframe>
 </div>
 </div>
 <!----	<h3> Lab Projects </h3>
